Implement JWT auth for the frontend

--- a/eticket-frontend/src/app/components/footer/footer.component.html
+++ b/eticket-frontend/src/app/components/footer/footer.component.html
@@ -2,7 +2,7 @@
   <div class="row align-items-center justify-content-xl-between">
     <div class="col-xl-6">
       <div class="copyright text-center text-xl-left text-muted">
-        &copy; {{ test | date: "yyyy" }} <a href="https://www.linkedin.com/in/martin-kostadinov-283848165/" class="font-weight-bold ml-1" target="_blank">Martin Kostadinov</a>
+        &copy; {{ test | date: "yyyy" }} | Product of <a href="https://www.linkedin.com/in/martin-kostadinov-283848165/" class="font-weight-bold ml-1" target="_blank">Martin Kostadinov</a>
       </div>
     </div>
     <div class="col-xl-6">
