--- a/eticket-frontend/src/app/layouts/auth-layout/auth-layout.component.html
+++ b/eticket-frontend/src/app/layouts/auth-layout/auth-layout.component.html
@@ -5,10 +5,10 @@
         <img class="site-logo" src="assets/img/brand/logo-rogue.svg" />
       </a>
       <button class="navbar-toggler" type="button" (click)="isCollapsed=!isCollapsed"
-         aria-controls="sidenav-collapse-main">
+        aria-controls="sidenav-collapse-main">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse"  [ngbCollapse]="isCollapsed" id="sidenav-collapse-main">
+      <div class="collapse navbar-collapse" [ngbCollapse]="isCollapsed" id="sidenav-collapse-main">
         <!-- Collapse header -->
         <div class="navbar-collapse-header d-md-none">
           <div class="row">
@@ -18,7 +18,7 @@
               </a>
             </div>
             <div class="col-6 collapse-close">
-              <button type="button" class="navbar-toggler" (click)="isCollapsed=!isCollapsed" >
+              <button type="button" class="navbar-toggler" (click)="isCollapsed=!isCollapsed">
                 <span></span>
                 <span></span>
               </button>
@@ -27,28 +27,34 @@
         </div>
         <!-- Navbar items -->
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
+          <li class="nav-item" *ngIf="!isLoggedIn">
+            <a class="nav-link nav-link-icon" routerLinkActive="active" [href]="backendUrl + '/register'">
+              <i class="ni ni-circle-08"></i>
+              <span class="nav-link-inner--text">Register</span>
+            </a>
+          </li>
+          <li class="nav-item" *ngIf="isLoggedIn">
             <a class="nav-link nav-link-icon" routerLinkActive="active" [routerLink]="['/dashboard']">
               <i class="ni ni-planet"></i>
               <span class="nav-link-inner--text">Dashboard</span>
             </a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link nav-link-icon" routerLinkActive="active" [routerLink]="['/register']">
-              <i class="ni ni-circle-08"></i>
-              <span class="nav-link-inner--text">Register</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link nav-link-icon" routerLinkActive="active" [routerLink]="['/login']">
+          <li class="nav-item" *ngIf="!isLoggedIn">
+            <a class="nav-link nav-link-icon" routerLinkActive="active" [href]="backendUrl + '/login'">
               <i class="ni ni-key-25"></i>
               <span class="nav-link-inner--text">Login</span>
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link nav-link-icon" routerLinkActive="active" [routerLink]="['/user-profile']">
-              <i class="ni ni-single-02"></i>
-              <span class="nav-link-inner--text">Profile</span>
+            <a class="nav-link nav-link-icon" routerLinkActive="active" [routerLink]="['/about-us']">
+              <i class="ni ni-palette"></i>
+              <span class="nav-link-inner--text">About us</span>
+            </a>
+          </li>
+          <li class="nav-item" *ngIf="isLoggedIn">
+            <a class="nav-link nav-link-icon" routerLinkActive="active" [href]="backendUrl + '/logout'" (click)="doLogout()">
+              <i class="ni ni-user-run"></i>
+              <span class="nav-link-inner--text">Logout</span>
             </a>
           </li>
         </ul>
@@ -62,22 +68,22 @@
     <div class="row align-items-center justify-content-xl-between">
       <div class="col-xl-6">
         <div class="copyright text-center text-xl-left text-muted">
-          &copy; {{ test | date: "yyyy" }} <a href="https://www.creative-tim.com?ref=ada-footer-auth-layout" class="font-weight-bold ml-1" target="_blank">Creative Tim</a>
+          &copy; {{ test | date: "yyyy" }} | Product of <a href="https://www.linkedin.com/in/martin-kostadinov-283848165/"
+            class="font-weight-bold ml-1" target="_blank">Martin Kostadinov</a>
         </div>
       </div>
       <div class="col-xl-6">
         <ul class="nav nav-footer justify-content-center justify-content-xl-end">
           <li class="nav-item">
-            <a href="https://www.creative-tim.com?ref=ada-footer-auth-layout" class="nav-link" target="_blank">Creative Tim</a>
+            <a href="https://www.linkedin.com/in/martin-kostadinov-283848165/" class="nav-link" target="_blank">Martin
+              Kostadinov</a>
           </li>
           <li class="nav-item">
-            <a href="https://www.creative-tim.com/presentation?ref=ada-footer-auth-layout" class="nav-link" target="_blank">About Us</a>
+            <a href="#" class="nav-link" target="_blank">About Me</a>
           </li>
           <li class="nav-item">
-            <a href="http://blog.creative-tim.com?ref=ada-footer-auth-layout" class="nav-link" target="_blank">Blog</a>
-          </li>
-          <li class="nav-item">
-            <a href="https://github.com/creativetimofficial/argon-dashboard-angular/blob/master/LICENSE.md" class="nav-link" target="_blank">MIT License</a>
+            <a href="https://github.com/MartinKostadinov1/eTicket/blob/master/LICENSE" class="nav-link"
+              target="_blank">License</a>
           </li>
         </ul>
       </div>
