--- a/eticket-frontend/src/app/pages/status/status.component.html
+++ b/eticket-frontend/src/app/pages/status/status.component.html
@@ -5,7 +5,7 @@
           <div class="row">
             <div class="col">
               <h5 class="card-title text-uppercase text-muted mb-0">Monthly Trips</h5>
-              <span class="h2 font-weight-bold mb-0">{{monthlyTrips}}</span>
+              <span class="h2 font-weight-bold mb-0">{{dashboardWidget.monthlyTrips}}</span>
             </div>
             <div class="col-auto">
               <div class="icon icon-shape bg-danger text-white rounded-circle shadow">
@@ -15,7 +15,7 @@
           </div>
           <p class="mt-3 mb-0 text-muted text-sm">
             <span class="mr-2" [ngClass]="calTripsPercentage == 0 ? '' : (calTripsPercentage > 0 ? 'text-success' : 'text-danger')">
-              <i class="fa" [ngClass]="calTripsPercentage == 0 ? '' : (calTripsPercentage > 0 ? 'fa-arrow-up' : 'fa-arrow-down')"></i> {{calTripsPercentage}}</span>
+              <i class="fa" [ngClass]="calTripsPercentage == 0 ? '' : (calTripsPercentage > 0 ? 'fa-arrow-up' : 'fa-arrow-down')"></i> {{calTripsPercentage}}%</span>
             <span class="text-nowrap">Since last month</span>
           </p>
         </div>
@@ -27,7 +27,7 @@
           <div class="row">
             <div class="col">
               <h5 class="card-title text-uppercase text-muted mb-0">Unpaid eTickets</h5>
-              <span class="h2 font-weight-bold mb-0">{{unpaidTickets}}</span>
+              <span class="h2 font-weight-bold mb-0">{{dashboardWidget.unpaidTickets}}</span>
             </div>
             <div class="col-auto">
               <div class="icon icon-shape bg-warning text-white rounded-circle shadow">
@@ -36,7 +36,7 @@
             </div>
           </div>
           <p class="mt-3 mb-0 text-muted text-sm">
-            <span class="text-nowrap">Total unpaid eTickets for the day</span>
+            <span class="text-nowrap">Total unpaid eTickets for the month</span>
           </p>
         </div>
       </div>
@@ -47,7 +47,7 @@
           <div class="row">
             <div class="col">
               <h5 class="card-title text-uppercase text-muted mb-0">Piad eTickets</h5>
-              <span class="h2 font-weight-bold mb-0">{{allTimePaidTickets}}</span>
+              <span class="h2 font-weight-bold mb-0">{{dashboardWidget.allPaidTickets}}</span>
             </div>
             <div class="col-auto">
               <div class="icon icon-shape bg-yellow text-white rounded-circle shadow">
@@ -66,17 +66,17 @@
         <div class="card-body">
           <div class="row">
             <div class="col">
-              <h5 class="card-title text-uppercase text-muted mb-0">Blance</h5>
-              <span class="h2 font-weight-bold mb-0">{{virtualBalance}} {{virtualBalanceCurrency}}</span>
+              <h5 class="card-title text-uppercase text-muted mb-0">Vehicles</h5>
+              <span class="h2 font-weight-bold mb-0">{{dashboardWidget.vehicleCount}}</span>
             </div>
             <div class="col-auto">
               <div class="icon icon-shape bg-info text-white rounded-circle shadow">
-                <i class="ni ni-credit-card"></i>
+                <i class="fas fa-car"></i>
               </div>
             </div>
           </div>
           <p class="mt-3 mb-0 text-muted text-sm">
-            <span class="text-nowrap">Current eTicket money balance</span>
+            <span class="text-nowrap">Vehicles that eTicket knows are yours</span>
           </p>
         </div>
       </div>
