--- a/eticket-frontend/src/app/pages/user-profile/user-profile.component.html
+++ b/eticket-frontend/src/app/pages/user-profile/user-profile.component.html
@@ -47,11 +47,11 @@
             <div class="col">
               <div class="card-profile-stats d-flex justify-content-center mt-md-5">
                 <div>
-                  <span class="heading">22</span>
+                  <span class="heading">{{ticketsCount}}</span>
                   <span class="description">eTickets</span>
                 </div>
                 <div>
-                  <span class="heading">10</span>
+                  <span class="heading">{{vehiclesCount}}</span>
                   <span class="description">Vehicles</span>
                 </div>
               </div>
