--- a/eticket-frontend/src/app/pages/start/start.component.html
+++ b/eticket-frontend/src/app/pages/start/start.component.html
@@ -4,9 +4,9 @@
       <div class="row justify-content-center">
         <div class="col-lg-5 col-md-6">
           <h1 class="text-white">Welcome to eTicket!</h1>
-          <p class="text-lead text-light" *ngIf="userExist">eTicket is a platform that provides you with easy, fast and secure payments of
+          <p class="text-lead text-light" *ngIf="isExistingUser || !isAuthenticated()">eTicket is a platform that provides you with easy, fast and secure payments of
             trip taxes.</p>
-          <p class="text-lead text-light" *ngIf="!userExist">Before we take you to the platform, please enter some personal information</p>
+          <p class="text-lead text-light" *ngIf="!isExistingUser && isAuthenticated()">Before we take you to the platform, please enter some personal information</p>
         </div>
       </div>
     </div>
