--- a/eticket-frontend/src/app/pages/status/status.component.html
+++ b/eticket-frontend/src/app/pages/status/status.component.html
@@ -1,84 +1,87 @@
 <div class="row">
-    <div class="col-xl-3 col-lg-6">
-      <div class="card card-stats mb-4 mb-xl-0">
-        <div class="card-body">
-          <div class="row">
-            <div class="col">
-              <h5 class="card-title text-uppercase text-muted mb-0">Monthly Trips</h5>
-              <span class="h2 font-weight-bold mb-0">{{dashboardWidget.monthlyTrips}}</span>
-            </div>
-            <div class="col-auto">
-              <div class="icon icon-shape bg-danger text-white rounded-circle shadow">
-                <i class="fas fa-map-marked-alt"></i>
-              </div>
+  <div class="col-xl-3 col-lg-6">
+    <div class="card card-stats mb-4 mb-xl-0">
+      <div class="card-body">
+        <div class="row">
+          <div class="col">
+            <h5 class="card-title text-uppercase text-muted mb-0">Monthly Trips</h5>
+            <span class="h2 font-weight-bold mb-0">{{dashboardWidget.monthlyTrips}}</span>
+          </div>
+          <div class="col-auto">
+            <div class="icon icon-shape bg-danger text-white rounded-circle shadow">
+              <i class="fas fa-map-marked-alt"></i>
             </div>
           </div>
-          <p class="mt-3 mb-0 text-muted text-sm">
-            <span class="mr-2" [ngClass]="calTripsPercentage == 0 ? '' : (calTripsPercentage > 0 ? 'text-success' : 'text-danger')">
-              <i class="fa" [ngClass]="calTripsPercentage == 0 ? '' : (calTripsPercentage > 0 ? 'fa-arrow-up' : 'fa-arrow-down')"></i> {{calTripsPercentage}}%</span>
-            <span class="text-nowrap">Since last month</span>
-          </p>
         </div>
-      </div>
-    </div>
-    <div class="col-xl-3 col-lg-6">
-      <div class="card card-stats mb-4 mb-xl-0">
-        <div class="card-body">
-          <div class="row">
-            <div class="col">
-              <h5 class="card-title text-uppercase text-muted mb-0">Unpaid eTickets</h5>
-              <span class="h2 font-weight-bold mb-0">{{dashboardWidget.unpaidTickets}}</span>
-            </div>
-            <div class="col-auto">
-              <div class="icon icon-shape bg-warning text-white rounded-circle shadow">
-                <i class="fa fa-ticket"></i>
-              </div>
-            </div>
-          </div>
-          <p class="mt-3 mb-0 text-muted text-sm">
-            <span class="text-nowrap">Total unpaid eTickets for the month</span>
-          </p>
-        </div>
-      </div>
-    </div>
-    <div class="col-xl-3 col-lg-6">
-      <div class="card card-stats mb-4 mb-xl-0">
-        <div class="card-body">
-          <div class="row">
-            <div class="col">
-              <h5 class="card-title text-uppercase text-muted mb-0">Piad eTickets</h5>
-              <span class="h2 font-weight-bold mb-0">{{dashboardWidget.allPaidTickets}}</span>
-            </div>
-            <div class="col-auto">
-              <div class="icon icon-shape bg-yellow text-white rounded-circle shadow">
-                <i class="fa fa-fire"></i>
-              </div>
-            </div>
-          </div>
-          <p class="mt-3 mb-0 text-muted text-sm">
-            <span class="text-nowrap">All time paid eTickets</span>
-          </p>
-        </div>
-      </div>
-    </div>
-    <div class="col-xl-3 col-lg-6">
-      <div class="card card-stats mb-4 mb-xl-0">
-        <div class="card-body">
-          <div class="row">
-            <div class="col">
-              <h5 class="card-title text-uppercase text-muted mb-0">Vehicles</h5>
-              <span class="h2 font-weight-bold mb-0">{{dashboardWidget.vehicleCount}}</span>
-            </div>
-            <div class="col-auto">
-              <div class="icon icon-shape bg-info text-white rounded-circle shadow">
-                <i class="fas fa-car"></i>
-              </div>
-            </div>
-          </div>
-          <p class="mt-3 mb-0 text-muted text-sm">
-            <span class="text-nowrap">Vehicles that eTicket knows are yours</span>
-          </p>
-        </div>
+        <p class="mt-3 mb-0 text-muted text-sm">
+          <span class="mr-2"
+            [ngClass]="calTripsPercentage == 0 ? '' : (calTripsPercentage > 0 ? 'text-success' : 'text-danger')">
+            <i class="fa"
+              [ngClass]="calTripsPercentage == 0 ? '' : (calTripsPercentage > 0 ? 'fa-arrow-up' : 'fa-arrow-down')"></i>
+            {{calTripsPercentage == 0 ? '-' : calTripsPercentage }}{{calTripsPercentage != 0 ? '%' : ''}} </span>
+          <span class="text-nowrap">Since last month</span>
+        </p>
       </div>
     </div>
   </div>
+  <div class="col-xl-3 col-lg-6">
+    <div class="card card-stats mb-4 mb-xl-0">
+      <div class="card-body">
+        <div class="row">
+          <div class="col">
+            <h5 class="card-title text-uppercase text-muted mb-0">Unpaid eTickets</h5>
+            <span class="h2 font-weight-bold mb-0">{{dashboardWidget.unpaidTickets}}</span>
+          </div>
+          <div class="col-auto">
+            <div class="icon icon-shape bg-warning text-white rounded-circle shadow">
+              <i class="fa fa-ticket"></i>
+            </div>
+          </div>
+        </div>
+        <p class="mt-3 mb-0 text-muted text-sm">
+          <span class="text-nowrap">Total unpaid eTickets for the month</span>
+        </p>
+      </div>
+    </div>
+  </div>
+  <div class="col-xl-3 col-lg-6">
+    <div class="card card-stats mb-4 mb-xl-0">
+      <div class="card-body">
+        <div class="row">
+          <div class="col">
+            <h5 class="card-title text-uppercase text-muted mb-0">Piad eTickets</h5>
+            <span class="h2 font-weight-bold mb-0">{{dashboardWidget.allPaidTickets}}</span>
+          </div>
+          <div class="col-auto">
+            <div class="icon icon-shape bg-yellow text-white rounded-circle shadow">
+              <i class="fa fa-fire"></i>
+            </div>
+          </div>
+        </div>
+        <p class="mt-3 mb-0 text-muted text-sm">
+          <span class="text-nowrap">All time paid eTickets</span>
+        </p>
+      </div>
+    </div>
+  </div>
+  <div class="col-xl-3 col-lg-6">
+    <div class="card card-stats mb-4 mb-xl-0">
+      <div class="card-body">
+        <div class="row">
+          <div class="col">
+            <h5 class="card-title text-uppercase text-muted mb-0">Vehicles</h5>
+            <span class="h2 font-weight-bold mb-0">{{dashboardWidget.vehicleCount}}</span>
+          </div>
+          <div class="col-auto">
+            <div class="icon icon-shape bg-info text-white rounded-circle shadow">
+              <i class="fas fa-car"></i>
+            </div>
+          </div>
+        </div>
+        <p class="mt-3 mb-0 text-muted text-sm">
+          <span class="text-nowrap">Vehicles that eTicket knows</span>
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
