--- a/eticket-frontend/src/app/pages/dashboard/dashboard.component.html
+++ b/eticket-frontend/src/app/pages/dashboard/dashboard.component.html
@@ -112,7 +112,7 @@
         <div class="card-header border-0">
           <div class="row align-items-center">
             <div class="col">
-              <h3 class="mb-0">Vehicles usage</h3>
+              <h3 class="mb-0">Vehicles usage - All time</h3>
             </div>
           </div>
         </div>
