--- a/eticket-frontend/src/app/pages/user-profile/user-profile.component.html
+++ b/eticket-frontend/src/app/pages/user-profile/user-profile.component.html
@@ -94,6 +94,7 @@
             <div class="pl-lg-4">
               <div class="row">
                 <div class="col-lg-6">
+                  <small class="pl-1 fields-requirement" *ngIf="errors['username']">{{errors['username']}}</small>
                   <div class="form-group">
                     <label class="form-control-label" for="input-username">Username</label>
                     <input type="text" id="input-username" class="form-control form-control-alternative"
@@ -101,6 +102,7 @@
                   </div>
                 </div>
                 <div class="col-lg-6">
+                  <small class="pl-1 fields-requirement" *ngIf="errors['email']">{{errors['email']}}</small>
                   <div class="form-group">
                     <label class="form-control-label" for="input-email">Email address</label>
                     <input type="email" id="input-email" class="form-control form-control-alternative"
@@ -110,6 +112,7 @@
               </div>
               <div class="row">
                 <div class="col-lg-6">
+                  <small class="pl-1 fields-requirement" *ngIf="errors['firstName']">{{errors['firstName']}}</small>
                   <div class="form-group">
                     <label class="form-control-label" for="input-first-name">First name</label>
                     <input type="text" id="input-first-name" class="form-control form-control-alternative"
@@ -117,6 +120,7 @@
                   </div>
                 </div>
                 <div class="col-lg-6">
+                  <small class="pl-1 fields-requirement" *ngIf="errors['lastName']">{{errors['lastName']}}</small>
                   <div class="form-group">
                     <label class="form-control-label" for="input-last-name">Last name</label>
                     <input type="text" id="input-last-name" class="form-control form-control-alternative"
@@ -131,6 +135,7 @@
             <div class="pl-lg-4">
               <div class="row">
                 <div class="col-md-12">
+                  <small class="pl-1 fields-requirement" *ngIf="errors['address']">{{errors['address']}}</small>
                   <div class="form-group">
                     <label class="form-control-label" for="input-address">Address</label>
                     <input id="input-address" class="form-control form-control-alternative" placeholder="Address"
@@ -140,6 +145,7 @@
               </div>
               <div class="row">
                 <div class="col-lg-4">
+                  <small class="pl-1 fields-requirement" *ngIf="errors['city']">{{errors['city']}}</small>
                   <div class="form-group">
                     <label class="form-control-label" for="input-city">City</label>
                     <input type="text" id="input-city" class="form-control form-control-alternative" placeholder="City"
@@ -147,6 +153,7 @@
                   </div>
                 </div>
                 <div class="col-lg-4">
+                  <small class="pl-1 fields-requirement" *ngIf="errors['country']">{{errors['country']}}</small>
                   <div class="form-group">
                     <label class="form-control-label" for="input-country">Country</label>
                     <input type="text" id="input-country" class="form-control form-control-alternative"
@@ -154,6 +161,7 @@
                   </div>
                 </div>
                 <div class="col-lg-4">
+                  <small class="pl-1 fields-requirement" *ngIf="errors['postCode']">{{errors['postCode']}}</small>
                   <div class="form-group">
                     <label class="form-control-label" for="input-country">Postal code</label>
                     <input type="number" id="input-postal-code" class="form-control form-control-alternative"
@@ -166,6 +174,7 @@
             <!-- Description -->
             <h6 class="heading-small text-muted mb-4">About me</h6>
             <div class="pl-lg-4">
+              <small class="pl-1 fields-requirement" *ngIf="errors['description']">{{errors['description']}}</small>
               <div class="form-group">
                 <label>About Me</label>
                 <textarea rows="4" class="form-control form-control-alternative" placeholder="About me"
